<resources>
    <string name="app_name">Thyroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="connection">Connection</string>
    <string name="history">History</string>
    <string name="switch_account">Switch Account</string>
    <string name="logout">Log Out</string>
    <string name="nav_heart_rate">Heart Rate</string>
    <string name="nav_connection">Connection</string>
    <string name="nav_history">History</string>
    <string name="nav_switch_account">Switch Account</string>
    <string name="nav_logout">Log Out</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID.apps.intercontinental.com</string>
    <string name="action_search">Search  \n</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="connect">Connect</string>
    <string name="edit_profile">Edit Profile</string>

</resources>